--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AndresjosehrAngular</title>
+  <title>José Andrés | Frontend Developer</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -12,5 +12,5 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.969e30c8c00894a124e6.js" defer></script><script src="scripts.8c895b14ac5afb48e4f9.js" defer></script><script src="main.71c7d8b9efbd48057d58.js" defer></script></body>
+<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.969e30c8c00894a124e6.js" defer></script><script src="scripts.8c895b14ac5afb48e4f9.js" defer></script><script src="main.c80c74980f1f14e7fd2a.js" defer></script></body>
 </html>
