Fonts preoload added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
+
+  <link rel="preload" href="assets/fonts/Calibre/Calibre-MediumItalic.woff2" as="font" crossorigin>
+  <link rel="preload" href="assets/fonts/Calibre/Calibre-SemiboldItalic.woff2" as="font" crossorigin>
+  <link rel="preload" href="assets/fonts/Calibre/Calibre-Regular.woff2" as="font" crossorigin>
+  <link rel="preload" href="assets/fonts/Calibre/Calibre-Medium.woff2" as="font" crossorigin>
+  <link rel="preload" href="assets/fonts/Calibre/Calibre-Semibold.woff2" as="font" crossorigin>
+  <link rel="preload" href="assets/fonts/Calibre/Calibre-RegularItalic.woff2" as="font" crossorigin>
+  <link rel="preload" href="assets/fonts/Calibre/Calibre-Light.woff2" as="font" crossorigin>
+  <link rel="preload" href="assets/fonts/Calibre/Calibre-LightItalic.woff2" as="font" crossorigin>
+  <link rel="preload" href="assets/fonts/SFMono/SFMono-Regular.woff2" as="font" crossorigin>
+  <link rel="preload" href="assets/fonts/SFMono/SFMono-SemiboldItalic.woff2" as="font" crossorigin>
+  <link rel="preload" href="assets/fonts/SFMono/SFMono-MediumItalic.woff2" as="font" crossorigin>
+  <link rel="preload" href="assets/fonts/SFMono/SFMono-RegularItalic.woff2" as="font" crossorigin>
+  <link rel="preload" href="assets/fonts/SFMono/SFMono-Medium.woff2" as="font" crossorigin>
+  <link rel="preload" href="assets/fonts/SFMono/SFMono-Semibold.woff2" as="font" crossorigin>
+
   <meta name="theme-color" content="#1976d2">
 <link rel="stylesheet" href="styles.2ec99300ea6c7cdd41ea.css"></head>
 <body>
