--- a/index.html
+++ b/index.html
@@ -2,14 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AndresjosehrAngular</title>
-  <base href="/andresjosehr-portfolio/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Primary Meta Tags -->
+  <title>José Andrés | Frontend Developer</title>
+  <meta name="title" content="José Andrés | Frontend Developer">
+  <meta name="description" content="Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas para hacer de la web un lugar mejor.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://andresjosehr.com/">
+  <meta property="og:title" content="José Andrés | Frontend Developer">
+  <meta property="og:description" content="Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas para hacer de la web un lugar mejor.">
+  <meta property="og:image" content="https://andresjosehr.com/assets/images/andresjosehr-preview.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://andresjosehr.com/">
+  <meta property="twitter:title" content="José Andrés | Frontend Developer">
+  <meta property="twitter:description" content="Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas para hacer de la web un lugar mejor.">
+  <meta property="twitter:image" content="https://andresjosehr.com/assets/images/andresjosehr-preview.png">
+
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
+  
+
   <meta name="theme-color" content="#1976d2">
-<link rel="stylesheet" href="styles.2ec99300ea6c7cdd41ea.css"></head>
+<link rel="stylesheet" href="styles.882275a78ce5da011ed8.css"></head>
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.969e30c8c00894a124e6.js" defer></script><script src="scripts.8c895b14ac5afb48e4f9.js" defer></script><script src="main.876e9b5f24f759c9667b.js" defer></script></body>
+<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.969e30c8c00894a124e6.js" defer></script><script src="scripts.8c895b14ac5afb48e4f9.js" defer></script><script src="main.c9d5218ff2b291971738.js" defer></script></body>
 </html>
