--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 
   <!-- Primary Meta Tags -->
-  <title>José Andrés | Frontend Developer</title>
+  <title>Andrés Ross | Frontend Developer</title>
   <meta name="title" content="José Andrés | Frontend Developer">
   <meta name="description" content="Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas para hacer de la web un lugar mejor.">
 
