--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 
   <!-- Primary Meta Tags -->
-  <title>José Andrés | Frontend Developer</title>
+  <title>Andrés Ross | Frontend Developer</title>
   <meta name="title" content="José Andrés | Frontend Developer">
   <meta name="description" content="Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas para hacer de la web un lugar mejor.">
 
@@ -33,5 +33,5 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.969e30c8c00894a124e6.js" defer></script><script src="scripts.8c895b14ac5afb48e4f9.js" defer></script><script src="main.c9d5218ff2b291971738.js" defer></script></body>
+<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.969e30c8c00894a124e6.js" defer></script><script src="scripts.8c895b14ac5afb48e4f9.js" defer></script><script src="main.e41d99bd602c444c7b48.js" defer></script></body>
 </html>
