Multilanguage suport added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 
   <!-- Primary Meta Tags -->
-  <title>Andrés Ross | Frontend Developer</title>
+  <title>José Andrés | Frontend Developer</title>
   <meta name="title" content="José Andrés | Frontend Developer">
   <meta name="description" content="Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas para hacer de la web un lugar mejor.">
 
@@ -29,9 +29,9 @@
   
 
   <meta name="theme-color" content="#1976d2">
-<link rel="stylesheet" href="styles.882275a78ce5da011ed8.css"></head>
+<link rel="stylesheet" href="styles.c6322a3ff8e57642cd0a.css"></head>
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.969e30c8c00894a124e6.js" defer></script><script src="scripts.8c895b14ac5afb48e4f9.js" defer></script><script src="main.e41d99bd602c444c7b48.js" defer></script></body>
+<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.4dc3b73f451c53467b36.js" defer></script><script src="scripts.8c895b14ac5afb48e4f9.js" defer></script><script src="main.26a7d7a8ed5c9de11770.js" defer></script></body>
 </html>
