--- a/src/index.html
+++ b/src/index.html
@@ -4,29 +4,29 @@
   <meta charset="utf-8">
 
   <!-- Primary Meta Tags -->
-  <title>José Andrés | Frontend Developer</title>
-  <meta name="title" content="José Andrés | Frontend Developer">
+  <title>Marcel Morais Luna @ M2L Solutions | FullStack Developer</title>
+  <meta name="title" content="Marcel Morais Luna  | FullStack Developer">
   <meta name="description" content="Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas para hacer de la web un lugar mejor.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://andresjosehr.com/">
-  <meta property="og:title" content="José Andrés | Frontend Developer">
+  <meta property="og:title" content="Marcel Morais Luna  | FullStack Developer">
   <meta property="og:description" content="Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas para hacer de la web un lugar mejor.">
   <meta property="og:image" content="https://andresjosehr.com/assets/images/andresjosehr-preview.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://andresjosehr.com/">
-  <meta property="twitter:title" content="José Andrés | Frontend Developer">
+  <meta property="twitter:url" content="https://x.com/marcelluna">
+  <meta property="twitter:title" content="Marcel Morais Luna  | FullStack Developer">
   <meta property="twitter:description" content="Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas para hacer de la web un lugar mejor.">
-  <meta property="twitter:image" content="https://andresjosehr.com/assets/images/andresjosehr-preview.png">
+  <meta property="twitter:image" content="https://marcelluna.com/assets/images/andresjosehr-preview.png">
 
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
-  
+
 
   <meta name="theme-color" content="#1976d2">
 </head>
