--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,20 @@
   <!-- Primary Meta Tags -->
   <title>Marcel Morais Luna @ M2L Solutions | FullStack Developer</title>
   <meta name="title" content="Marcel Morais Luna  | FullStack Developer">
-  <meta name="description" content="Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas para hacer de la web un lugar mejor.">
+  <meta name="description" content="12+ years experience in IT with a Bachelor's Degree in Computer Science and specialization in software engineer but I'm self-taught and like to apply new technologies when they are mature enough and it's the best fit for the project.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://andresjosehr.com/">
   <meta property="og:title" content="Marcel Morais Luna  | FullStack Developer">
-  <meta property="og:description" content="Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas para hacer de la web un lugar mejor.">
+  <meta property="og:description" content="12+ years experience in IT with a Bachelor's Degree in Computer Science and specialization in software engineer but I'm self-taught and like to apply new technologies when they are mature enough and it's the best fit for the project.">
   <meta property="og:image" content="https://andresjosehr.com/assets/images/andresjosehr-preview.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://x.com/marcelluna">
   <meta property="twitter:title" content="Marcel Morais Luna  | FullStack Developer">
-  <meta property="twitter:description" content="Con 4 años de experiencia desarrollando sistemas, interfaces, bots y soluciones tecnológicas para hacer de la web un lugar mejor.">
+  <meta property="twitter:description" content="12+ years experience in IT with a Bachelor's Degree in Computer Science and specialization in software engineer but I'm self-taught and like to apply new technologies when they are mature enough and it's the best fit for the project.">
   <meta property="twitter:image" content="https://marcelluna.com/assets/images/andresjosehr-preview.png">
 
   <base href="/">
